# string-err

./: Cargo.toml  README.md
src/: constructor.rs  debug.rs  display.rs  error.rs  getter.rs  lib.rs  maybe_backtrace.rs  result_ext.rs
